0.3/_sources/generated/sphinx_gallery_examples/index.rst.txt
:orphan:



.. _sphx_glr_generated_sphinx_gallery_examples:

Examples
========

.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_generated_sphinx_gallery_examples_pool:

Pool Based AL Strategies
------------------------


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Random Sampling">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-RandomSampling-Random_Sampling_thumb.gif
     :alt: Random Sampling

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-RandomSampling-Random_Sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-RandomSampling-Random_Sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Active Learning with Cost Embedding">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE)_thumb.gif
     :alt: Active Learning with Cost Embedding

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Uncertainty Sampling with Entropy">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy_thumb.gif
     :alt: Uncertainty Sampling with Entropy

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Epistemic Uncertainty Sampling">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling_thumb.gif
     :alt: Epistemic Uncertainty Sampling

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Querying Informative and Representative Examples">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE)_thumb.gif
     :alt: Querying Informative and Representative Examples

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Uncertainty Sampling with Least-Confidence">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence_thumb.gif
     :alt: Uncertainty Sampling with Least-Confidence

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Uncertainty Sampling with Margin">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Uncertainty_Sampling_with_Margin_thumb.gif
     :alt: Uncertainty Sampling with Margin

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Uncertainty_Sampling_with_Margin.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Uncertainty_Sampling_with_Margin

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Average Precision">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Expected_Average_Precision_thumb.gif
     :alt: Expected Average Precision

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Expected_Average_Precision.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-UncertaintySampling-Expected_Average_Precision

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Density-Diversity-Distribution-Distance Sampling">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS)_thumb.gif
     :alt: Density-Diversity-Distribution-Distance Sampling

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Monte-Carlo EER with Log-Loss">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss_thumb.gif
     :alt: Monte-Carlo EER with Log-Loss

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Monte-Carlo EER with Misclassification-Loss">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss_thumb.gif
     :alt: Monte-Carlo EER with Misclassification-Loss

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Discriminative Active Learning">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL)_thumb.gif
     :alt: Discriminative Active Learning

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multi-class Probabilistic Active Learning">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL)_thumb.gif
     :alt: Multi-class Probabilistic Active Learning

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Query-by-Committee with Vote Entropy">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-QueryByCommittee-Query-by-Committee_with_Vote_Entropy_thumb.gif
     :alt: Query-by-Committee with Vote Entropy

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-QueryByCommittee-Query-by-Committee_with_Vote_Entropy.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_with_Vote_Entropy

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Query-by-Committee with Kullback-Leibler Divergence">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-QueryByCommittee-Query-by-Committee_with_Kullback-Leibler_Divergence_thumb.gif
     :alt: Query-by-Committee with Kullback-Leibler Divergence

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-QueryByCommittee-Query-by-Committee_with_Kullback-Leibler_Divergence.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-QueryByCommittee-Query-by-Committee_with_Kullback-Leibler_Divergence

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value of Information">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ValueOfInformationEER-Value_of_Information_(VOI)_thumb.gif
     :alt: Value of Information

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ValueOfInformationEER-Value_of_Information_(VOI).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_(VOI)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value of Information on Labeled Samples">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples_thumb.gif
     :alt: Value of Information on Labeled Samples

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value of Information on Unlabeled Samples">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples_thumb.gif
     :alt: Value of Information on Unlabeled Samples

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Greedy Sampling on the Feature Space (GSx)">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx)_thumb.gif
     :alt: Greedy Sampling on the Feature Space (GSx)

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Greedy Sampling on the Target Space (GSy)">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy)_thumb.gif
     :alt: Greedy Sampling on the Target Space (GSy)

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Improved Greedy Sampling (GSi)">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi)_thumb.gif
     :alt: Improved Greedy Sampling (GSi)

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi).py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi)

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Model Variance Reduction">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction_thumb.gif
     :alt: Expected Model Variance Reduction

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Model Change">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ExpectedModelChangeMaximization-Expected_Model_Change_thumb.gif
     :alt: Expected Model Change

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ExpectedModelChangeMaximization-Expected_Model_Change.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ExpectedModelChangeMaximization-Expected_Model_Change

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Model Output Change">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ExpectedModelOutputChange-Expected_Model_Output_Change_thumb.gif
     :alt: Expected Model Output Change

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ExpectedModelOutputChange-Expected_Model_Output_Change.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-ExpectedModelOutputChange-Expected_Model_Output_Change

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression based Kullback Leibler Divergence Maximization">

.. only:: html

 .. figure:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization_thumb.gif
     :alt: Regression based Kullback Leibler Divergence Maximization

     :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/sphinx_gallery_examples/pool/plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_generated_sphinx_gallery_examples_stream:

Stream Based AL Strategies
--------------------------

.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: sphinx_gallery_examples_python.zip </generated/sphinx_gallery_examples/sphinx_gallery_examples_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: sphinx_gallery_examples_jupyter.zip </generated/sphinx_gallery_examples/sphinx_gallery_examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
