0.5/_sources/generated/sphinx_gallery_examples/index.rst.txt
:orphan:

Examples
========


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Pool Based AL Strategies
------------------------

**Legend for classification plots**

.. image:: ../examples/pool_classification_legend.png

**Legend for regression plots**

.. image:: ../examples/pool_regression_legend.png



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Core Set">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-CoreSet-Core_Set_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-CoreSet-Core_Set.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Core Set</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Random Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-RandomSampling-Random_Sampling_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-RandomSampling-Random_Sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Random Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Active Learning with Cost Embedding">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-CostEmbeddingAL-Active_Learning_with_Cost_Embedding_(ALCE).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Active Learning with Cost Embedding</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Clustering Uncertainty-weighted Embeddings (CLUE)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-Clue-Clustering_Uncertainty-weighted_Embeddings_(CLUE)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-Clue-Clustering_Uncertainty-weighted_Embeddings_(CLUE).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Clustering Uncertainty-weighted Embeddings (CLUE)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Contrastive Active Learning (CAL)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ContrastiveAL-Contrastive_Active_Learning_(CAL)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ContrastiveAL-Contrastive_Active_Learning_(CAL).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contrastive Active Learning (CAL)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Batch Active Learning by Diverse Gradient Embedding (BADGE)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-Badge-Batch_Active_Learning_by_Diverse_Gradient_Embedding_(BADGE)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-Badge-Batch_Active_Learning_by_Diverse_Gradient_Embedding_(BADGE).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Batch Active Learning by Diverse Gradient Embedding (BADGE)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Typical Clustering (TypiClust)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-TypiClust-Typical_Clustering_(TypiClust)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-TypiClust-Typical_Clustering_(TypiClust).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Typical Clustering (TypiClust)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Uncertainty Sampling with Entropy">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Uncertainty_Sampling_with_Entropy.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Uncertainty Sampling with Entropy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Epistemic Uncertainty Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-EpistemicUncertaintySampling-Epistemic_Uncertainty_Sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Epistemic Uncertainty Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Querying Informative and Representative Examples">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-Quire-Querying_Informative_and_Representative_Examples_(QUIRE).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Querying Informative and Representative Examples</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Uncertainty Sampling with Least-Confidence">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Uncertainty_Sampling_with_Least-Confidence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Uncertainty Sampling with Least-Confidence</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Uncertainty Sampling with Margin">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Uncertainty_Sampling_with_Margin_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Uncertainty_Sampling_with_Margin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Uncertainty Sampling with Margin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Probability Coverage (ProbCover)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ProbCover-Probability_Coverage_(ProbCover)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ProbCover-Probability_Coverage_(ProbCover).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Probability Coverage (ProbCover)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Average Precision">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Expected_Average_Precision_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Expected_Average_Precision.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expected Average Precision</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Density-Diversity-Distribution-Distance Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-FourDs-Density-Diversity-Distribution-Distance_Sampling_(4DS).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Density-Diversity-Distribution-Distance Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Monte-Carlo EER with Log-Loss">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-MonteCarloEER-Monte-Carlo_EER_with_Log-Loss.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Monte-Carlo EER with Log-Loss</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Monte-Carlo EER with Misclassification-Loss">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-MonteCarloEER-Monte-Carlo_EER_with_Misclassification-Loss.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Monte-Carlo EER with Misclassification-Loss</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Batch Density-Diversity-Distribution-Distance Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-FourDs-Batch_Density-Diversity-Distribution-Distance_Sampling_(Batch4DS)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-FourDs-Batch_Density-Diversity-Distribution-Distance_Sampling_(Batch4DS).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Batch Density-Diversity-Distribution-Distance Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sub-sampling Wrapper">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-SubSamplingWrapper-Sub-sampling_Wrapper_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-SubSamplingWrapper-Sub-sampling_Wrapper.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sub-sampling Wrapper</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Discriminative Active Learning">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-DiscriminativeAL-Discriminative_Active_Learning_(DAL).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Discriminative Active Learning</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Parallel Utility Estimation Wrapper">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ParallelUtilityEstimationWrapper-Parallel_Utility_Estimation_Wrapper_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ParallelUtilityEstimationWrapper-Parallel_Utility_Estimation_Wrapper.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parallel Utility Estimation Wrapper</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multi-class Probabilistic Active Learning">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ProbabilisticAL-Multi-class_Probabilistic_Active_Learning_(McPAL).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-class Probabilistic Active Learning</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Query-by-Committee (QBC) with Vote Entropy">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Vote_Entropy_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Vote_Entropy.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Query-by-Committee (QBC) with Vote Entropy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Query-by-Committee (QBC) with Variation Ratios">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Variation_Ratios_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Variation_Ratios.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Query-by-Committee (QBC) with Variation Ratios</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Query-by-Committee (QBC) with Kullback-Leibler Divergence">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Kullback-Leibler_Divergence_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Kullback-Leibler_Divergence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Query-by-Committee (QBC) with Kullback-Leibler Divergence</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value of Information">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ValueOfInformationEER-Value_of_Information_(VOI)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ValueOfInformationEER-Value_of_Information_(VOI).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Value of Information</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value of Information on Labeled Samples">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ValueOfInformationEER-Value_of_Information_on_Labeled_Samples.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Value of Information on Labeled Samples</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Value of Information on Unlabeled Samples">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ValueOfInformationEER-Value_of_Information_on_Unlabeled_Samples.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Value of Information on Unlabeled Samples</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Batch Bayesian Active Learning by Disagreement (BatchBALD)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-BatchBALD-Batch_Bayesian_Active_Learning_by_Disagreement_(BatchBALD)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-BatchBALD-Batch_Bayesian_Active_Learning_by_Disagreement_(BatchBALD).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Batch Bayesian Active Learning by Disagreement (BatchBALD)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Bayesian Active Learning by Disagreement (BALD)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedyBALD-Bayesian_Active_Learning_by_Disagreement_(BALD)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedyBALD-Bayesian_Active_Learning_by_Disagreement_(BALD).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian Active Learning by Disagreement (BALD)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Density-weighted Uncertainty Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Density-weighted_Uncertainty_Sampling_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Density-weighted_Uncertainty_Sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Density-weighted Uncertainty Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Greedy Sampling on the Feature Space (GSx)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedySamplingX-Greedy_Sampling_on_the_Feature_Space_(GSx).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Greedy Sampling on the Feature Space (GSx)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Greedy Sampling on the Target Space (GSy)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedySamplingTarget-Greedy_Sampling_on_the_Target_Space_(GSy).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Greedy Sampling on the Target Space (GSy)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Improved Greedy Sampling (GSi)">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi)_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-GreedySamplingTarget-Improved_Greedy_Sampling_(GSi).py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Improved Greedy Sampling (GSi)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Model Variance Reduction">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ExpectedModelVarianceReduction-Expected_Model_Variance_Reduction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expected Model Variance Reduction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Model Change">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ExpectedModelChangeMaximization-Expected_Model_Change_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ExpectedModelChangeMaximization-Expected_Model_Change.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expected Model Change</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Tree Based Active Learning (RT-AL) with Random Selection">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Random_Selection_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Random_Selection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regression Tree Based Active Learning (RT-AL) with Random Selection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Tree Based Active Learning (RT-AL) with Diversity Selection">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Diversity_Selection_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Diversity_Selection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regression Tree Based Active Learning (RT-AL) with Diversity Selection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Tree Based Active Learning (RT-AL) with Representativity Selection">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Representativity_Selection_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-RegressionTreeBasedAL-Regression_Tree_Based_Active_Learning_(RT-AL)_with_Representativity_Selection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regression Tree Based Active Learning (RT-AL) with Representativity Selection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Query-by-Committee (QBC) with Empirical Variance">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Empirical_Variance_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-QueryByCommittee-Query-by-Committee_(QBC)_with_Empirical_Variance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Query-by-Committee (QBC) with Empirical Variance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Expected Model Output Change">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-ExpectedModelOutputChange-Expected_Model_Output_Change_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-ExpectedModelOutputChange-Expected_Model_Output_Change.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expected Model Output Change</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression based Kullback Leibler Divergence Maximization">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-KLDivergenceMaximization-Regression_based_Kullback_Leibler_Divergence_Maximization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regression based Kullback Leibler Divergence Maximization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Dual strategy for Active Learning">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/pool/images/thumb/sphx_glr_plot-UncertaintySampling-Dual_strategy_for_Active_Learning_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_pool_plot-UncertaintySampling-Dual_strategy_for_Active_Learning.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Dual strategy for Active Learning</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Stream Based AL Strategies
--------------------------
**Legend for classification plots**

.. image:: ../examples/stream_classification_legend.png


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Split">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-Split-Split_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-Split-Split.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Split</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Periodic Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-PeriodicSampling-Periodic_Sampling_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-PeriodicSampling-Periodic_Sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Periodic Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Stream Random Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-StreamRandomSampling-Stream_Random_Sampling_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-StreamRandomSampling-Stream_Random_Sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stream Random Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fixed-Uncertainty">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-FixedUncertainty-Fixed-Uncertainty_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-FixedUncertainty-Fixed-Uncertainty.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fixed-Uncertainty</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Variable-Uncertainty">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-VariableUncertainty-Variable-Uncertainty_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-VariableUncertainty-Variable-Uncertainty.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Variable-Uncertainty</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Density Based Active Learning for Data Streams">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-StreamDensityBasedAL-Density_Based_Active_Learning_for_Data_Streams_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-StreamDensityBasedAL-Density_Based_Active_Learning_for_Data_Streams.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Density Based Active Learning for Data Streams</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Randomized-Variable-Uncertainty">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-RandomVariableUncertainty-Randomized-Variable-Uncertainty_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-RandomVariableUncertainty-Randomized-Variable-Uncertainty.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Randomized-Variable-Uncertainty</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cognitive Dual-Query Strategy with Random Sampling">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-CognitiveDualQueryStrategyRan-Cognitive_Dual-Query_Strategy_with_Random_Sampling_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-CognitiveDualQueryStrategyRan-Cognitive_Dual-Query_Strategy_with_Random_Sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cognitive Dual-Query Strategy with Random Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cognitive Dual-Query Strategy with Variable-Uncertainty">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-CognitiveDualQueryStrategyVarUn-Cognitive_Dual-Query_Strategy_with_Variable-Uncertainty_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-CognitiveDualQueryStrategyVarUn-Cognitive_Dual-Query_Strategy_with_Variable-Uncertainty.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cognitive Dual-Query Strategy with Variable-Uncertainty</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cognitive Dual-Query Strategy with Fixed-Uncertainty">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-CognitiveDualQueryStrategyFixUn-Cognitive_Dual-Query_Strategy_with_Fixed-Uncertainty_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-CognitiveDualQueryStrategyFixUn-Cognitive_Dual-Query_Strategy_with_Fixed-Uncertainty.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cognitive Dual-Query Strategy with Fixed-Uncertainty</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cognitive Dual-Query Strategy with Randomized-Variable-Uncertainty">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-CognitiveDualQueryStrategyRanVarUn-Cognitive_Dual-Query_Strategy_with_Randomized-Variable-Uncertainty_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-CognitiveDualQueryStrategyRanVarUn-Cognitive_Dual-Query_Strategy_with_Randomized-Variable-Uncertainty.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cognitive Dual-Query Strategy with Randomized-Variable-Uncertainty</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Probabilistic Active Learning in Datastreams">

.. only:: html

  .. image:: /generated/sphinx_gallery_examples/stream/images/thumb/sphx_glr_plot-StreamProbabilisticAL-Probabilistic_Active_Learning_in_Datastreams_thumb.gif
    :alt:

  :ref:`sphx_glr_generated_sphinx_gallery_examples_stream_plot-StreamProbabilisticAL-Probabilistic_Active_Learning_in_Datastreams.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Probabilistic Active Learning in Datastreams</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /generated/sphinx_gallery_examples/pool/index.rst
   /generated/sphinx_gallery_examples/stream/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: sphinx_gallery_examples_python.zip </generated/sphinx_gallery_examples/sphinx_gallery_examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: sphinx_gallery_examples_jupyter.zip </generated/sphinx_gallery_examples/sphinx_gallery_examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
